# TinyDisasterVQA

./: .gitignore  README.md  inspect_cocoqa.py
benchmark_logs_final/: tdm_fast_128_board.txt  tdm_fast_128_gvsoc.txt  tdm_xs_128_board.txt  tdm_xs_128_gvsoc.txt
data/processed/: answer_prototypes.json  answer_vocab.json  cocoqa_full_stats.json  cocoqa_pruned_stats.json  cocoqa_resolved_stats.json  cocoqa_test_pruned.jsonl  cocoqa_test_resolved.jsonl  cocoqa_val_pruned.jsonl  cocoqa_val_resolved.jsonl  question_vocab.json  question_vocab_stats.json
dataset/data/: class_to_label.json  test_annotations.json  train_annotations.json  valid_annotations.json  word_to_token.json
docs/presentation_assets/: final_numbers.csv  student_ablation_takeaways.txt  student_accuracy_vs_params_v2.csv
eval/baseline/: val_metrics.json
gap9_generated/tdm_xxs_single_ce_224_best/: CMakeLists.txt  demo_expected.json  run_make.sh  sdk.config  tdm_xxs_single_ce_224_best.c  tdm_xxs_single_ce_224_best.h
gap9_generated_final/tdm_fast_128_ce_best/: calibration_manifest.csv
models/: tdm_xs_multihead_ce_128_best.onnx  tdm_xs_multihead_ce_128_best.onnx.data  tdm_xxs_single_ce_224_best.onnx.data
notebooks/: floodnet_student_ablation_final.ipynb  floodnet_teacher_ablation_final.ipynb
onnx/: tdm_fast_128_ce_best.onnx  tdm_xs_128_ce_best.onnx
scripts/: 01_cocoqa2json.py  01_explore_dataset.py  02_build_manifest.py  02_prune_cocoqa.py  03_build_answer_space.py  03_resolve_coco_images.py  04_download_images.py  04_download_pruned_images.py  04_prepare_training_data.py  05_sanity_check_dataset.py  05_train_teacher.py  06_build_question_vocab.py  06_train_student.py  07_check_dataloader.py  07_export_student.py  08_generate_gap9_artifacts.py  08_overfit_100.py  09_make_gap9_demo_input.py  09_train_baseline.py  10_evaluate.py  10_gap9_random_demo.py  11_generate_presentation_assets.py  11_train_gapcnn.py  12_generate_teacher_ablation_v2.py  12_train_mobilenet_teacher.py  13_generate_student_ablation_v2.py  14_generate_architecture_diagram.py  15_generate_deployment_pipeline.py  build_answer_prototypes.py  diagnose_pruning.py  inspect_cocoqa_samples.py  smoke_test_kd.py  smoke_test_prototype_model.py  smoke_test_question_model.py  summarize_cocoqa_final.py  train_question_vqa.py
src/: dataset.py  metrics.py  model.py  text.py
src/data/: __init__.py  dataset.py  helpers.py  transforms.py  vocab.py
src/evaluation/: __init__.py  confusion.py  evaluator.py  metrics.py
src/models/: __init__.py  backbones.py  blocks.py  encoders.py  heads.py  vqa_models.py
src/tinydisastervqa/: data.py  metrics.py  models.py  utils.py
src/training/: __init__.py  checkpointing.py  helpers.py  trainer.py
src/utils/: __init__.py  logging.py  model_info.py  serialization.py
submission_artifacts_final/: tdm_xxs_single_ce_224_best.onnx
testing/: 01_test_dataloader.py  02_test_teacher_forward.py  03_test_tdm_s_forward.py  03_test_teacher_ablation.py  04_test_student_ablation.py  04_test_student_models.py
